# online-city-tickets-backend/src/main/java/org/pwr/onlinecityticketsbackend/controller/TicketController.java
@@ -1,6 +1,7 @@
 package org.pwr.onlinecityticketsbackend.controller;
 
 import java.util.List;
+import java.util.Map;
 import lombok.RequiredArgsConstructor;
 import org.pwr.onlinecityticketsbackend.dto.PurchaseTicketReqDto;
 import org.pwr.onlinecityticketsbackend.dto.TicketDto;
@@ -36,5 +37,11 @@ public class TicketController {
     public ResponseEntity<TicketDto> getTicket(@PathVariable String code)
             throws AccountNotFound, TicketNotFound, AuthenticationInvalidRequest {
         return ResponseEntity.ok(ticketService.getTicket(code));
+    }
+
+    @GetMapping("/status")
+    public ResponseEntity<Map<String, List<TicketDto>>> listTicketsStatus()
+            throws AccountNotFound, AuthenticationInvalidRequest {
+        return ResponseEntity.ok(ticketService.getActiveAndPastTickets());
     }
 }
